added jest and supertest for launches

--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.7.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
