--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,10 @@
   "main": "src/server.js",
   "scripts": {
     "test": "jest",
+    "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.3.0",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^5.3.0"
   }
 }
