--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.3.0",
     "express": "^4.18.1",
+    "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "pm2": "^5.3.0"
   }
