--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,6 +8,7 @@ jobs:
   build:
     env:
       CI: true
+      MONGO_URL: mongodb://localhost/test
     strategy:
       matrix:
         node-version: [16.x, 17.x, 18.x]
@@ -19,5 +20,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Use Mongo DB in Github Actions
+        uses: supercharge/mongodb-github-action@v1.10.0
       - run: npm install
       - run: npm run build --prefix client
